# Treehouse

./: .gitignore  README.md  Start Treehouse (Mac).command  Start Treehouse (Windows).bat  default.project.json  pyproject.toml  sourcemap.json
docs/: InStudioRendering_Concept.md  NetworkDiagram_Prompt.md  PluginAutomation_Feasibility.md  ValueBaseAttributeConverter.md
generators/: build_attribute_tree.py  build_collision_diagram.py  build_network_diagram.py  build_ownership_diagram.py  build_value_network_diagram.py  build_valuebase_tree.py
mailbox/: README.md  server.py
plugin/: AttributeDump_StudioCommand.luau  AttributeToolGui.luau  Dumpers.luau  Plugin.server.luau  README.md  Treehouse.rbxm  Treehouse[Free].rbxm  build.py  default.project.json
plugin/free/: AttributeTreeFree.server.luau
test/: README.md  TestSetup_StudioCommand.luau
working/: AttributeTree.html  AttributeTree.luau  CollisionNetworkDiagram.html  CollisionTree.luau  NetworkDiagram.html  OwnershipNetworkDiagram.html  OwnershipTree.luau  README.md  ValueBaseTree.html  ValueBaseTree.luau  ValueNetworkDiagram.html
